--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</div>
 		<div id="nav">
 			<ul>
+				<li class="selected">Introduction</li>
 				<li>Existing Legal Frameworks</li>
 				<li>Security Threats and Solutions</li>
 				<li>Case Studies</li>
