--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div id="container">
 		<div id="header"> 
 			<h1>Wireless Medical Device Security</h1>
+			<img class="heart" src="heart-trans.png" width="200px"></img>
 		</div>
 		<div id="nav">
 			<ul>
