--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li class="selected">Introduction</li>
 				<li>Existing Legal Frameworks</li>
 				<li>Security Threats and Solutions</li>
-				<li>Case Studies</li>
+				<a href="case_studies.html"><li>Case Studies</li></a>
 			</ul>
 		</div>
 		<div id="content-container">
@@ -54,7 +54,7 @@
 
 			<h2>FCC Irresponsibility</h2>
 
-			The Federal Communications Commission (FCC) is another government entity that was harried by House Representatives in a response to the story of the computer analyst named Jerome Radcliffe who, for security vulnerability demonstration purposes, managed to hack his own wireless insulin pump. [:: [Jerome Radcliffe]] The response from the FCC was perhaps defensive when it claimed, "With respect to wireless enabled medical devices, the FCC is responsible for governing radio devices so as to provide for effective operation and communication, including allocating spectrum and specifying technical requirements to avoid harmful interference between users. The FDA is responsible for protecting the public health and assuring safety and effectiveness by regulating medical devices.” [:: [FCC Oversight]] In other words, the FCC assumes no jurisdiction over this problem and considers all matters of wireless medical device effectiveness and safety up to the FDA to protect.
+			The Federal Communications Commission (FCC) is another government entity that was harried by House Representatives in a response to the story of the computer analyst named Jerome Radcliffe who, for security vulnerability demonstration purposes, managed to hack his own wireless insulin pump. [:: [Jerome Radcliffe]] The response from the FCC was perhaps defensive when it claimed, "With respect to wireless enabled medical devices, the FCC is responsible for governing radio devices so as to provide for effective operation and communication, including allocating spectrum and specifying technical requirements to avoid harmful interference between users. The FDA is responsible for protecting the public health and assuring safety and effectiveness by regulating medical devices." [:: [FCC Oversight]] In other words, the FCC assumes no jurisdiction over this problem and considers all matters of wireless medical device effectiveness and safety up to the FDA to protect.
 
 
 			<h2>Conclusions</h2>
