Also, include new index.html

--- a/index.html
+++ b/index.html
@@ -20,50 +20,12 @@
 			</ul>
 		</div>
 		<div id="content-container">
-		<div id="content">
-			<h1 class="page-header">Existing Legal Frameworks</h1>
-			<h2>Lay of the Legal Landscape</h2>
-
-			Because the development of wireless medical devices is growing dramatically, the security risks associated with the exploitation of medical device system vulnerabilities are still untold. As these devices become mainstream and proliferate into additional branches of medicine, the vulnerabilities in the devices will manifest as they are exposed, either intentionally or otherwise.
-
-			At the current time, medical devices encompass a new and hitherto undefined domain. Given that the global market of medical devices was at about $200 billion in 2006 with an expected annual growth rate of as much as 9%, there are many new interfaces and systems that have simply not been out in the real world for long. [:: [Market Report]] In America, the branch of government that has jurisdiction over medical devices is the U.S. Food and Drug Administration (FDA). However, the level detail in the medical device security standards set by the FDA is generic at best. In a 2011 ICACT Tutorial, Dr. G.V. Rangaraj, IEEE Senior Member suggested in his tutorial that the FDA guidelines specifications for security and data integrity of wireless medical devices as follows, "appropriate security of medical devices which should ensure reliable, secure communication and continued functionality while preserving patient's safety, confidentiality and data integrity." [:: [Tutorial], slide 6] Unfortunately, these guidelines seem to offer very little in the way of concrete ideas for how to accomplish reliability, patient safety, and data integrity.
-
-
-			<h2>Insecure Definition of Security</h2>
-
-			While the FDA recommends these lofty standards for wireless functionality, secure design, and environment stability within medical devices, they have little idea as to the specifics of the software implementation. A large factor contributing to the difficulty of making a secure wireless medical device system is that defining "secure" is practically impossible. In other words, the only way to know a device is secure is to test every possible situation or attack, which is unfortunately impossible to enumerate. Thus, in addition to the FDA's relative ignorance as to the actual development of "secure" wireless medical devices, the FDA's standard of "secure communication" is not even definable.
-
-
-			<h2>Software Under-attention</h2>
-
-			Shawn Merdinger, a Network Security Analyst at the University of Florida and Shands Hospital, suggests that another legal gap is that the FDA doesn't even regulate software components within medical devices. Rather, the FDA details standards that focus on the medical devices at a very abstract level, which leaves the security concerns and evaluations up to the developers. [:: FDA Software Oversight, slide 27] According to the Manufacturer and User Facility Device Experience (MAUDE) data established by the FDA, which makes public federal agency records regarding any reported adverse events involving medical devices, there have been 23 reported cases (since 1992) of medical devices with a buffer overflow error [:: [Buffer Overflow]] and 97 such reports returned by the search query "floating point error."
-
-			In a notice issued on November 4, 2009, the FDA notes its belief that cybersecurity for networked medical devices is a shared responsibility, but only between the device manufacturers:
-
-			"Typically, FDA approval is not required before installing changes, updates, or patches that address cybersecurity issues. Software patches usually do not involve FDA review because most patches are installed to reduce the risk of a cybersecurity problem and not to address a risk to health posed by the device." [:: [Reminder from the FDA]]
-
-			The FDA perceives the scope of its responsibility as addressing issues that pose a risk to the health of the patient. However, the FDA also suggests that software security is not included in that description. For whatever reason, the FDA effectively assumes no responsibility for regulating software despite the fact that software is a huge component of the operations for a medical device. According to a statement made by professor Kevin Fu, phD, a former FDA director of the Center for Devices and Radiological Health (CDRH) says that seldom does an FDA inspector assigned to review a 510(k) application (i.e. an application for marketing a medical device) have experience in software engineering even though over half the medical devices on the US market now involve software. [:: [Security Statement]]
-
-
-			<h2>Why is the FDA Laissez Faire towards Software?</h2>
-
-			John Murray, a Software Compliance Expert at the Center for Devices and Radiological Health, FDA, suggests the FDA's official stance is that the device manufacturer bears the ultimate responsibility for the continued safe and effective performance of their medical device. Unfortunately, there is a complication in that the manufacturers are not always able to control the network in which the hospital chooses to use the medical device. Thus, the FDA needs to expand its conception of the cybersecurity problem to include other involved parties and not solely pin the entire burden of security on manufacturers. For instance, there ought to be some venue of taking into the account the methods and practices of the hospitals where the wireless medical devices are actively used. [::[Cybersecurity of Medical Devices]] Murray suggests that the FDA has very little interest and efficacy in dealing with software issues that aren't immediately seen to be "health safety-related issues." However, the fact that many software insecurities can be breached to adversely affect the device and the patient seems to be a connection that the FDA doesn't deem significant.
-
-			Murray theorizes that one reason why the FDA feels comfortable delegating all the responsibility of ensuring safe software to the manufacturers is because the lifecycle of software is so short. Because new versions and security updates of software spring up so frequently, the FDA does not know any better with regards to how software updates and security work. Because they see security updates occur all the time, they assume everything is under perfect control at all times (or at least will be very soon) and that there is no need for coordination or regulation between the manufacturers, hospitals, network providers, and users.
-
-			<h2>FCC Irresponsibility</h2>
-
-			The Federal Communications Commission (FCC) is another government entity that was harried by House Representatives in a response to the story of the computer analyst named Jerome Radcliffe who, for security vulnerability demonstration purposes, managed to hack his own wireless insulin pump. [:: [Jerome Radcliffe]] The response from the FCC was perhaps defensive when it claimed, "With respect to wireless enabled medical devices, the FCC is responsible for governing radio devices so as to provide for effective operation and communication, including allocating spectrum and specifying technical requirements to avoid harmful interference between users. The FDA is responsible for protecting the public health and assuring safety and effectiveness by regulating medical devices.” [:: [FCC Oversight]] In other words, the FCC assumes no jurisdiction over this problem and considers all matters of wireless medical device effectiveness and safety up to the FDA to protect.
-
-
-			<h2>Conclusions</h2>
-
-			It seems that the newness of wireless medical device technology accounts for the fact that the FDA simply does not adequately understand what to do in bolstering security. A large part of this is that the software component that is necessary in the software analysis appears to be a large barrier to entry for government entities like the FDA or the FCC. So, ultimately, who pays for this problem? The short answer is "everyone we need to protect"; manufacturers, physicians, and most directly, the patients. The legal architecture is not currently situated to deal with the rapidly growing wireless medical devices space or even properly identify what organizations or parties should be collaborating on the security effort. As a consequence, there are a lot of security holes that can be identified. At the same time, the power of the legal system might also offer solutions to defend against those very same risks.
-		</div>
-		<div id="footnotes">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>
-		
+			<div id="content">
+				<h1>Index</h1>
+			</div>
+			<div id="footnotes">
+				FOOTNOTE
+			</div>
 		</div>
 	</div>
 </body>
