--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 	<div id="container">
 		<div id="header"> 
 			<h1>Wireless Medical Device Security</h1>
-			<img class="heart" src="heart-trans.png" width="200px"></img>
+			<img class="heart" src="images/heart-trans.png"></img>
 		</div>
 		<div id="nav">
 			<ul>
-				<li class="selected">Introduction</li>
-				<li>Existing Legal Frameworks</li>
-				<li>Security Threats and Solutions</li>
-				<a href="case_studies.html"><li>Case Studies</li></a>
+				<li class="selected"><a href="index.html">Introduction</a></li>
+				<li><a href="legal.html">Existing Legal Frameworks</a></li>
+				<li><a href="threats.html">Security Threats and Solutions</a></li>
+				<li><a href="case-studies.html">Case Studies</a></li>
 			</ul>
 		</div>
 		<div id="content-container">
 			<div id="content">
-				CONTENT
+				<h1>Index</h1>
 			</div>
 			<div id="footnotes">
 				FOOTNOTE
 			</div>
+		</div>
 	</div>
 </body>
 
