Selection and case studies done.

--- a/threats.html
+++ b/threats.html
@@ -14,10 +14,10 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li class="selected"><a href="index.html">Introduction</a></li>
-				<li><a href="legal.html">Existing Legal Frameworks</a></li>
-				<li><a href="threats.html">Security Threats and Solutions</a></li>
-				<li><a href="case-studies.html">Case Studies</a></li>
+				<li class="nav"><a class="" href="index.html">Introduction</a></li>
+				<li class="nav"><a class="" href="legal.html">Existing Legal Frameworks</a></li>
+				<li class="nav"><a class="selected" href="threats.html">Security Threats and Solutions</a></li>
+				<li class="nav"><a class="" href="case-studies.html">Case Studies</a></li>
 			</ul>
 		</div>
 		<div id="content-container">
