--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div id="content-container">
 			<div id="content">
-				<h1>Index</h1>
+				<h1 class="page-header">Medical Device Security</h1>
 
 In July 2010, ex-Vice-President, Richard Cheney underwent surgery to be fitted
 with a left-ventricular assist device at the Ivanova Fairfax Heart and Vascular Institute to
@@ -164,24 +164,24 @@ retinal implants are reversing deafness and blindness.
 
 <h2>References</h2>
 
-1. http://en.wikipedia.org/wiki/Dick_Cheney
-2. Columbia Surgery, “Cardiac Device Update:Wireless LVAD in the Pipeline”, http:/
+<ol>
+	<li>http://en.wikipedia.org/wiki/Dick_Cheney</li>
+	<li>Columbia Surgery, "Cardiac Device Update:Wireless LVAD in the Pipeline", http:/
 /www.columbiasurgery.net/2011/08/11/cardiac-device-update-wireless-lvad-in-the-
-
-pipeline/
-3. World Health Organization. http://www.who.int/mediacentre/factsheets/fs346/en/
-index.html
-4. Rubin, Avi. “All Your Devices Can Be Hacked”, TED Talk, TEDxMidAtlantic,
-October 2011
-5. Fu K. “Trustworthy Medical Device Software”. IOM Workshop on Public health
-Effectiveness of the FDA 510(k) Clearance Process, April 2011
-6. Ullah et al. “A Review of Wireless Body Area Networks for Medical Applications”
+pipeline/</li>
+<li>World Health Organization. http://www.who.int/mediacentre/factsheets/fs346/en/
+index.html</li>
+<li>Rubin, Avi. "All Your Devices Can Be Hacked", TED Talk, TEDxMidAtlantic,
+October 2011</li>
+<li>Fu K. "Trustworthy Medical Device Software". IOM Workshop on Public health
+Effectiveness of the FDA 510(k) Clearance Process, April 2011</li>
+<li>Ullah et al. "A Review of Wireless Body Area Networks for Medical Applications"
 International Journal of Communications, Network and System Sciences, Vol. 2, No.
-8, pp 797-803, 2010
-7. Halperin et al. “Security and Privacy for Implantable Medical Devices”. Pervasive
-Computing 7:1:2008
-8. Freedonia. “Implantable Medical Devices to 2015 - Demand and Sales Forecasts,
-Market Share, Market Size, Market Leaders”, March 2012
+8, pp 797-803, 2010</li>
+<li>Halperin et al. "Security and Privacy for Implantable Medical Devices". Pervasive
+Computing 7:1:2008</li>
+<li>Freedonia. "Implantable Medical Devices to 2015 - Demand and Sales Forecasts,
+Market Share, Market Size, Market Leaders", March 2012</li>
 			</div>
 			<div id="footnotes">
 				
