--- a/threats.html
+++ b/threats.html
@@ -22,7 +22,7 @@
 		</div>
 		<div id="content-container">
 			<div id="content">
-				<h1 class="page-header">Security threats and solutions</h1>
+				<h1 class="page-header">Security Threats and Solutions</h1>
 
 <h2>Standard principles of computer security</h2>
 In general, there are three main pillars that form the underlying framework of computer security: confidentiality, integrity, and availability. For a computer system to be secure, it must provide all these three things.
